# gaussian_splats

./: .gitignore  Cargo.toml  README.md  index.html  justfile
.github/workflows/: pages.yml
src/: gaussian.rs  main.rs  ply.rs  splat_pass.rs
src/shaders/: preprocess.wgsl  render.wgsl  sort.wgsl
